implemented global settings to enable preview for single launcher